--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,14 @@ code {
 	cursor: pointer;
 	transform: scale(1.03);
 }
+
+.not-found {
+	display: flex;
+	min-height: calc(100vh - 3.5rem);
+	justify-content: center;
+	align-items: center;
+}
+
+.not-found h1 {
+	font-size: 2.5rem;
+}
