--- a/client/src/scss/partials/_not-found-page.scss
+++ b/client/src/scss/partials/_not-found-page.scss
@@ -1,10 +1,84 @@
-.not-found {
-	display: flex;
-	min-height: calc(100vh - 3.5rem);
-	justify-content: center;
-	align-items: center;
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Gamja+Flower");
 
-	& h1 {
-		font-size: 2.5rem;
+.not-found {
+	min-height: calc(100vh - 3.75rem);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #fff;
+	flex-direction: column;
+
+	.title {
+		background-color: black;
+		color: white;
+		padding: 0.9375rem;
+		padding-left: 1.875rem;
+		padding-right: 1.875rem;
+		font-size: 1.875rem;
+		text-align: center;
+	}
+
+	.tipsiz {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0.625rem;
+		flex-direction: column;
+
+		&-body {
+			display: flex;
+			align-items: center;
+			margin: 0.625rem;
+		}
+
+		.arm {
+			align-self: flex-end;
+			width: 3.125rem;
+			height: 5.625rem;
+			border-top: 0.1875rem solid black;
+
+			&-left {
+				border-right: 0.1875rem solid black;
+				transform: skew(20deg);
+			}
+			&-right {
+				border-left: 0.1875rem solid black;
+				transform: skew(-20deg);
+			}
+		}
+
+		.face {
+			width: 18.75rem;
+			height: 12.5rem;
+			border: 0.1875rem solid black;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			margin-left: 1.25rem;
+			margin-right: 1.25rem;
+			border-radius: 0.9375rem;
+
+			&-upper {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				letter-spacing: 5rem;
+				margin-left: 5rem;
+
+				.element {
+					font-size: 3.75rem;
+				}
+			}
+		}
+
+		.mouth {
+			width: 1.25rem;
+			height: 0.625rem;
+			border-top-left-radius: 1.5625rem;
+			border-top-right-radius: 1.5625rem;
+			border: 0.1875rem solid black;
+			border-bottom: 0;
+		}
 	}
 }
